--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "homepage": "https://literalwizard.github.io/MashoodPortfolio/"
+    "homepage": "https://literalwizard.github.io/MashoodPortfolio"
   },
   "scripts": {
     "start": "react-scripts start",
