GH-Pages Update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://literalwizard.github.io/MashoodPortfolio/",
+  "homepage": "https://literalwizard.github.io/MashoodPortfolio",
   "name": "mashood_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -12,12 +12,12 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
