GH-Pages Update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://literalwizard.github.io/MashoodPortfolio",
+  "homepage": "http://literalwizard.github.io/MashoodPortfolio",
   "name": "mashood_portfolio",
   "version": "0.1.0",
   "private": true,
