Added New Functionality and BG

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-parallax": "^3.0.3",
     "react-scripts": "3.4.3"
   },
   "scripts": {
