--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.0.3",
+    "react-player": "^2.6.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
